# mv-dashboard

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yml  package-lock.json  package.json
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
src/: api_client.rs  auth.rs  config.rs  main.rs  routes.rs
templates/: index.html  login.html
templates/fragments/: cases.html  followup.html
testresources/: test1.json  test2.json
web/: rspack.config.js  script.js  style.css
