[package]
name = "mv-dashboard"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "time", "tracing"] }
tower-http = {version = "0.6", features = ["trace", "cors"]}
tower-sessions = "0.14"
axum = { version = "0.8", features = ["tokio", "tracing"] }
axum-login = { version = "0.18"}
askama = "0.15"
clap = { version = "4.6", features = ["cargo", "env", "derive"] }
tracing-subscriber = "0.3"
reqwest = {version = "0.13", features = ["json"], default-features = false}
tracing = "0.1.44"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.19"
uuid = {version = "1.23", features = ["v4"], default-features = false}
regex = "1.12"
include_dir = "0.7"
chrono = "0.4"
itertools = "0.14"

[dev-dependencies]
rstest = "0.26"
tower = "0.5"
httpmock = "0.8"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"

# Profiles

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"